Replace spaces in Brightwheel images
- Also fix broken links in index.html

--- a/Brightwheel.html
+++ b/Brightwheel.html
@@ -32,7 +32,7 @@
                 <div class="navlinks">
                     <a class="navlink" href="about.html">About</a>
                     <a class="navlink" href="work.html">Work</a>
-                    <a class="navlink" target="_blank" href="img/Kotomi Cogdill Resume 2020.pdf">Resume</a>
+                    <a class="navlink" target="_blank" href="img/Kotomi-Cogdill-Resume-2020.pdf">Resume</a>
                     <a class="navlink" href="contact.html">Contact</a>
                 </div>
             </div>
@@ -51,7 +51,7 @@
             </div>
 
 
-            <img class="matcha-hero-image" src="Brightwheel/Mock up.png" alt="Brightwheel app mock up three screens">
+            <img class="matcha-hero-image" src="Brightwheel/Mock-up.png" alt="Brightwheel app mock up three screens">
         </div>
 
 
@@ -132,11 +132,11 @@
         <div>
 
             <a href=#img-interview class="lightbox-link">
-                <img class="mirror-content2" src="Brightwheel/Interview summary.jpg" alt="Interview summary">
+                <img class="mirror-content2" src="Brightwheel/Interview-summary.jpg" alt="Interview summary">
             </a>
 
             <a href="#!" class="lightbox" id="img-interview">
-                <span style="background-image: url('Brightwheel/Interview\ summary.jpg')"></span>
+                <span style="background-image: url('Brightwheel/Interview-summary.jpg')"></span>
             </a>
 
         </div>
@@ -189,11 +189,11 @@
         <div>
 
             <a href=#img-user-flow class="lightbox-link">
-                <img class="mirror-content2" src="Brightwheel/User flow.jpg" alt="User flow">
+                <img class="mirror-content2" src="Brightwheel/User-flow.jpg" alt="User flow">
             </a>
 
             <a href="#!" class="lightbox" id="img-user-flow">
-                <span style="background-image: url('Brightwheel/User\ flow.jpg')"></span>
+                <span style="background-image: url('Brightwheel/User-flow.jpg')"></span>
             </a>
 
         </div>
@@ -245,24 +245,24 @@
         <div>
 
             <a href=#img-wireframes-request class="lightbox-link">
-                <img class="mirror-content2" src="Brightwheel/Wireframe sending a request.jpg"
+                <img class="mirror-content2" src="Brightwheel/Wireframe-sending-a-request.jpg"
                     alt="mid-fidelity wireframes sending a request">
             </a>
 
             <a href="#!" class="lightbox" id="img-wireframes-request">
-                <span style="background-image: url('Brightwheel/Wireframe\ sending\ a\ request.jpg')"></span>
+                <span style="background-image: url('Brightwheel/Wireframe-sending-a-request.jpg')"></span>
             </a>
 
         </div>
 
         <div><a href=#img-wireframes-request class="lightbox-link">
                 <a href=#img-wireframes-privacy class="lightbox-link">
-                    <img class="mirror-content2" src="Brightwheel/Wireframe privacy setting.jpg"
+                    <img class="mirror-content2" src="Brightwheel/Wireframe-privacy-setting.jpg"
                         alt="mid-fidelity wireframes privacy setting">
                 </a>
 
                 <a href="#!" class="lightbox" id="img-wireframes-privacy">
-                    <span style="background-image: url('Brightwheel/Wireframe\ privacy\ setting.jpg')"></span>
+                    <span style="background-image: url('Brightwheel/Wireframe-privacy-setting.jpg')"></span>
                 </a>
 
         </div>
@@ -282,12 +282,12 @@
         <div>
 
             <a href=#img-hifi-request class="lightbox-link">
-                <img class="mirror-content2" src="Brightwheel/Sending a request.jpg"
+                <img class="mirror-content2" src="Brightwheel/Sending-a-request.jpg"
                     alt="mid-fidelity wireframes sending a request">
             </a>
 
             <a href="#!" class="lightbox" id="img-hifi-request">
-                <span style="background-image: url('Brightwheel/Sending\ a\ request.jpg')"></span>
+                <span style="background-image: url('Brightwheel/Sending-a-request.jpg')"></span>
             </a>
 
         </div>
@@ -295,12 +295,12 @@
         <div>
 
             <a href=#img-hifi-privacy class="lightbox-link">
-                <img class="mirror-content2" src="Brightwheel/Privacy setting.jpg"
+                <img class="mirror-content2" src="Brightwheel/Privacy-setting.jpg"
                     alt="mid-fidelity wireframes sending a request">
             </a>
 
             <a href="#!" class="lightbox" id="img-hifi-privacy">
-                <span style="background-image: url('Brightwheel/Privacy\ setting.jpg')"></span>
+                <span style="background-image: url('Brightwheel/Privacy-setting.jpg')"></span>
             </a>
 
         </div>
@@ -308,12 +308,12 @@
         <div>
 
             <a href=#img-hifi-approving class="lightbox-link">
-                <img class="mirror-content2" src="Brightwheel/Approving a request.jpg"
+                <img class="mirror-content2" src="Brightwheel/Approving-a-request.jpg"
                     alt="mid-fidelity wireframes sending a request">
             </a>
 
             <a href="#!" class="lightbox" id="img-hifi-approving">
-                <span style="background-image: url('Brightwheel/Approving\ a\ request.jpg')"></span>
+                <span style="background-image: url('Brightwheel/Approving-a-request.jpg')"></span>
             </a>
 
         </div>
@@ -357,11 +357,11 @@
 
         <div>
             <a href=#img-affinity-map class="lightbox-link">
-                <img class="mirror-content2" src="Brightwheel/Affinity map.jpg" alt="Affinity map">
+                <img class="mirror-content2" src="Brightwheel/Affinity-map.jpg" alt="Affinity map">
             </a>
 
             <a href="#!" class="lightbox" id="img-affinity-map">
-                <span style="background-image: url('Brightwheel/Affinity\ map.jpg')"></span>
+                <span style="background-image: url('Brightwheel/Affinity-map.jpg')"></span>
             </a>
         </div>
 
@@ -379,11 +379,11 @@
             </div>
             <div>
                 <a href=#img-revision-profile class="lightbox-link">
-                    <img class="mirror-content2" src="Brightwheel/Priority revision profile.jpg"
+                    <img class="mirror-content2" src="Brightwheel/Priority-revision-profile.jpg"
                         alt="Revisions I made based on the user test, profile">
                 </a>
                 <a href="#!" class="lightbox" id="img-revision-profile">
-                    <span style="background-image: url('Brightwheel/Priority\ revision\ profile.jpg')"></span>
+                    <span style="background-image: url('Brightwheel/Priority-revision-profile.jpg')"></span>
                 </a>
             </div>
         </div>
@@ -397,12 +397,12 @@
             <div>
 
                 <a href=#img-revision-tags class="lightbox-link">
-                    <img class="mirror-content2" src="Brightwheel/Priority revision tags.jpg"
+                    <img class="mirror-content2" src="Brightwheel/Priority-revision-tags.jpg"
                         alt="Revisions I made based on the user test, tags">
                 </a>
 
                 <a href="#!" class="lightbox" id="img-revision-tags">
-                    <span style="background-image: url('Brightwheel/Priority\ revision\ tags.jpg')"></span>
+                    <span style="background-image: url('Brightwheel/Priority-revision-tags.jpg')"></span>
                 </a>
 
             </div>
@@ -421,12 +421,12 @@
             <div>
 
                 <a href=#img-revision-settings class="lightbox-link">
-                    <img class="mirror-content2" src="Brightwheel/Priority revision settings.jpg"
+                    <img class="mirror-content2" src="Brightwheel/Priority-revision-settings.jpg"
                         alt="Revisions I made based on the user test, profile">
                 </a>
 
                 <a href="#!" class="lightbox" id="img-revision-settings">
-                    <span style="background-image: url('Brightwheel/Priority\ revision\ settings.jpg')"></span>
+                    <span style="background-image: url('Brightwheel/Priority-revision-settings.jpg')"></span>
                 </a>
 
             </div>
@@ -450,12 +450,12 @@
             <div>
 
                 <a href=#img-revision-message class="lightbox-link">
-                    <img class="mirror-content2" src="Brightwheel/Priority revision message.jpg"
+                    <img class="mirror-content2" src="Brightwheel/Priority-revision-message.jpg"
                         alt="Revisions I made based on the user test, profile">
                 </a>
 
                 <a href="#!" class="lightbox" id="img-revision-message">
-                    <span style="background-image: url('Brightwheel/Priority\ revision\ message.jpg')"></span>
+                    <span style="background-image: url('Brightwheel/Priority-revision-message.jpg')"></span>
                 </a>
 
             </div>
@@ -490,7 +490,7 @@
 
         </div>
         <div class="after-case-study">
-            <a class="previous-color" href="Windows to Japan.html">View next case study</a>
+            <a class="previous-color" href="windows-to-japan.html">View next case study</a>
 
 
         </div>
