--- a/all-about-matcha.html
+++ b/all-about-matcha.html
@@ -32,7 +32,7 @@
                 <div class="navlinks">
                     <a class="navlink" href="about.html">About</a>
                     <a class="navlink" href="work.html">Work</a>
-                    <a class="navlink" target="_blank" href="img/Kotomi Cogdill Resume 2020.pdf">Resume</a>
+                    <a class="navlink" target="_blank" href="img/Kotomi-Cogdill-Resume-2020.pdf">Resume</a>
                     <a class="navlink" href="contact.html">Contact</a>
                 </div>
             </div>
@@ -49,7 +49,7 @@
             </div>
 
 
-            <img class="matcha-hero-image" src="matcha-img/Matcha mock up.png"
+            <img class="matcha-hero-image" src="matcha-img/Matcha-mock-up.png"
                 alt="All about matcha responsive website mock up screens">
         </div>
 
@@ -227,11 +227,11 @@
 
         <div>
             <a href=#img-user-flow class="lightbox-link">
-                <img class="mirror-content2" src="matcha-img/User flow.jpg" alt="User flow">
+                <img class="mirror-content2" src="matcha-img/User-flow.jpg" alt="User flow">
             </a>
 
             <a href="#!" class="lightbox" id="img-user-flow">
-                <span style="background-image: url('matcha-img/User\ flow.jpg')"></span>
+                <span style="background-image: url('matcha-img/User-flow.jpg')"></span>
             </a>
         </div>
 
@@ -288,12 +288,12 @@
 
         <div>
             <a href=#img-wireframe-main class="lightbox-link">
-                <img class="mirror-content2" src="matcha-img/Wireframes main.jpg"
+                <img class="mirror-content2" src="matcha-img/Wireframes-main.jpg"
                     alt="Wireframes main page 3 iterations">
             </a>
 
             <a href="#!" class="lightbox" id="img-wireframe-main">
-                <span style="background-image: url('matcha-img/Wireframes\ main.jpg')"></span>
+                <span style="background-image: url('matcha-img/Wireframes-main.jpg')"></span>
             </a>
         </div>
 
@@ -303,12 +303,12 @@
 
         <div>
             <a href=#img-wireframe-class class="lightbox-link">
-                <img class="mirror-content2" src="matcha-img/Wireframes iteration class.jpg"
+                <img class="mirror-content2" src="matcha-img/Wireframes-iteration-class.jpg"
                     alt="Wireframes class overview page 2 iterations">
             </a>
 
             <a href="#!" class="lightbox" id="img-wireframe-class">
-                <span style="background-image: url('matcha-img/Wireframes\ iteration\ class.jpg')"></span>
+                <span style="background-image: url('matcha-img/Wireframes-iteration-class.jpg')"></span>
             </a>
         </div>
 
@@ -331,21 +331,21 @@
 
         <div>
             <a href=#img-home class="lightbox-link">
-                <img class="mirror-content2" src="matcha-img/Responsive homepage.jpg" alt="Hi-fi responsive screens">
+                <img class="mirror-content2" src="matcha-img/Responsive-homepage.jpg" alt="Hi-fi responsive screens">
             </a>
 
             <a href="#!" class="lightbox" id="img-home">
-                <span style="background-image: url('matcha-img/Responsive\ homepage.jpg')"></span>
+                <span style="background-image: url('matcha-img/Responsive-homepage.jpg')"></span>
             </a>
         </div>
 
         <div>
             <a href=#img-wireframe-others class="lightbox-link">
-                <img class="mirror-content2" src="matcha-img/Hi-fi other pages.jpg" alt="Hi-fi other screens">
+                <img class="mirror-content2" src="matcha-img/Hi-fi-other-pages.jpg" alt="Hi-fi other screens">
             </a>
 
             <a href="#!" class="lightbox" id="img-wireframe-others">
-                <span style="background-image: url('matcha-img/Hi-fi\ other\ pages.jpg')"></span>
+                <span style="background-image: url('matcha-img/Hi-fi-other-pages.jpg')"></span>
             </a>
         </div>
 
@@ -390,11 +390,11 @@
 
         <div>
             <a href=#img-affinity class="lightbox-link">
-                <img class="mirror-content2" src="matcha-img/Affinity Map.jpg" alt="Affinity map">
+                <img class="mirror-content2" src="matcha-img/Affinity-Map.jpg" alt="Affinity map">
             </a>
 
             <a href="#!" class="lightbox" id="img-affinity">
-                <span style="background-image: url('matcha-img/Affinity\ Map.jpg')"></span>
+                <span style="background-image: url('matcha-img/Affinity-Map.jpg')"></span>
             </a>
         </div>
 
@@ -412,12 +412,12 @@
 
             <div>
                 <a href=#img-revision-nav class="lightbox-link">
-                    <img class="mirror-content2" src="matcha-img/Priority revision nav bar.jpg"
+                    <img class="mirror-content2" src="matcha-img/Priority-revision-nav-bar.jpg"
                         alt="Revisions I made based on the user test, nav bar">
                 </a>
 
                 <a href="#!" class="lightbox" id="img-revision-nav">
-                    <span style="background-image: url('matcha-img/Priority\ revision\ nav\ bar.jpg')"></span>
+                    <span style="background-image: url('matcha-img/Priority-revision-nav-bar.jpg')"></span>
                 </a>
             </div>
         </div>
@@ -431,12 +431,12 @@
 
             <div>
                 <a href=#img-revision-class class="lightbox-link">
-                    <img class="mirror-content2" src="matcha-img/Priority revision class.jpg"
+                    <img class="mirror-content2" src="matcha-img/Priority-revision-class.jpg"
                         alt="Revisions I made based on the user test, class overview page">
                 </a>
 
                 <a href="#!" class="lightbox" id="img-revision-class">
-                    <span style="background-image: url('matcha-img/Priority\ revision\ class.jpg')"></span>
+                    <span style="background-image: url('matcha-img/Priority-revision-class.jpg')"></span>
                 </a>
             </div>
         </div>
@@ -451,12 +451,12 @@
 
             <div>
                 <a href=#img-revision-checkout class="lightbox-link">
-                    <img class="mirror-content2" src="matcha-img/Priority revision checkout.jpg"
+                    <img class="mirror-content2" src="matcha-img/Priority-revision-checkout.jpg"
                         alt="Revisions I made based on the user test, check out">
                 </a>
 
                 <a href="#!" class="lightbox" id="img-revision-checkout">
-                    <span style="background-image: url('matcha-img/Priority\ revision\ checkout.jpg')"></span>
+                    <span style="background-image: url('matcha-img/Priority-revision-checkout.jpg')"></span>
                 </a>
             </div>
         </div>
