--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <div class="navlinks">
                     <a class="navlink" href="about.html">About</a>
                     <a class="navlink" href="work.html">Work</a>
-                    <a class="navlink" target="_blank" href="img/Kotomi Cogdill Resume 2020.pdf">Resume</a>
+                    <a class="navlink" target="_blank" href="img/Kotomi-Cogdill-Resume-2020.pdf">Resume</a>
                     <a class="navlink" href="contact.html">Contact</a>
                 </div>
             </div>
@@ -64,7 +64,7 @@
         </div>
 
 
-        <img class="illustration" src="img/kotomidrawing.png" alt="kotomi is studying with her dogs"></a>
+        <img class="illustration" src="img/kotomidrawing.png" alt="Kotomi is studying with her dogs"></a>
 
 
 
@@ -76,11 +76,11 @@
             <h2>Case Studies</h2>
 
             <div class="case-study">
-                <a href="Windows to Japan.html">
+                <a href="Windows-to-Japan.html">
 
 
 
-                    <img class="case-study-image" src="img/wtj mock up.png"
+                    <img class="case-study-image" src="img/wtj-mock-up.png"
                         alt="Windows to Japan, an end-end application">
 
                 </a>
@@ -89,7 +89,7 @@
                     <div class="title-shurui">STUDENT PROJECT</div>
                     <div class="case-study-title">Windows to Japan</div>
                     An end-end application that replaces your physical itinerary with a digital one..
-                    <div><a class="case-study-cta case-study-cta-button" href="Windows to Japan.html">View case study</a>
+                    <div><a class="case-study-cta case-study-cta-button" href="Windows-to-Japan.html">View case study</a>
                     </div>
                 </div>
 
@@ -102,7 +102,7 @@
 
 
 
-                    <img class="case-study-image" src="img/Mock up brightwheel.png"
+                    <img class="case-study-image" src="img/Mock-up-brightwheel.png"
                         alt="Brightwheel, add a feature project">
 
                 </a>
@@ -125,7 +125,7 @@
 
 
 
-                    <img class="case-study-image" src="img/Matcha mock up.png"
+                    <img class="case-study-image" src="img/Matcha-mock-up.png"
                         alt="All about matcha, e-commerce website">
 
                 </a>
