--- a/windows-to-japan.html
+++ b/windows-to-japan.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -124,11 +124,11 @@
         <div>
 
             <a href=#img-competitive-analysis class="lightbox-link">
-                <img class="mirror-content2" src="wtj-img/Competitive analysis.jpg" alt="Competitive analysis">
+                <img class="mirror-content2" src="wtj-img/Competitive-analysis.jpg" alt="Competitive analysis">
             </a>
 
             <a href="#!" class="lightbox" id="img-competitive-analysis">
-                <span style="background-image: url('wtj-img/Competitive\ analysis.jpg')"></span>
+                <span style="background-image: url('wtj-img/Competitive-analysis.jpg')"></span>
             </a>
 
         </div>
@@ -167,11 +167,11 @@
             <div>
 
                 <a href=#img-interview-summary class="lightbox-link">
-                    <img class="mirror-content2" src="wtj-img/Interview summary.jpg" alt="Interview summary">
+                    <img class="mirror-content2" src="wtj-img/Interview-summary.jpg" alt="Interview summary">
                 </a>
 
                 <a href="#!" class="lightbox" id="img-interview-summary">
-                    <span style="background-image: url('wtj-img/Interview\ summary.jpg')"></span>
+                    <span style="background-image: url('wtj-img/Interview-summary.jpg')"></span>
                 </a>
 
             </div>
@@ -227,11 +227,11 @@
         <div>
 
             <a href=#img-user-flow class="lightbox-link">
-                <img class="mirror-content2" src="wtj-img/User flow.jpg" alt="User flow">
+                <img class="mirror-content2" src="wtj-img/User-flow.jpg" alt="User flow">
             </a>
 
             <a href="#!" class="lightbox" id="img-user-flow">
-                <span style="background-image: url('wtj-img/User\ flow.jpg')"></span>
+                <span style="background-image: url('wtj-img/User-flow.jpg')"></span>
             </a>
 
         </div>
@@ -345,11 +345,11 @@
 
         <div>
             <a href=#img-affinity-map class="lightbox-link">
-                <img class="mirror-content2" src="wtj-img/WTJ lo-fi Affinity Map.jpg" alt="Affinity map">
+                <img class="mirror-content2" src="wtj-img/WTJ-lo-fi-Affinity-Map.jpg" alt="Affinity map">
             </a>
 
             <a href="#!" class="lightbox" id="img-affinity-map">
-                <span style="background-image: url('wtj-img/WTJ\ lo-fi\ Affinity\ Map.jpg')"></span>
+                <span style="background-image: url('wtj-img/WTJ-lo-fi-Affinity-Map.jpg')"></span>
             </a>
         </div>
 
@@ -373,24 +373,24 @@
         <div>
 
             <a href=#img-hifi-main class="lightbox-link">
-                <img class="mirror-content2" src="wtj-img/Main highfi.jpg"
+                <img class="mirror-content2" src="wtj-img/Main-highfi.jpg"
                     alt="mid-fidelity wireframes sending a request">
             </a>
 
             <a href="#!" class="lightbox" id="img-hifi-main">
-                <span style="background-image: url('wtj-img/Main\ highfi.jpg')"></span>
+                <span style="background-image: url('wtj-img/Main-highfi.jpg')"></span>
             </a>
 
         </div>
         <div>
 
             <a href=#img-hifi-others class="lightbox-link">
-                <img class="mirror-content2" src="wtj-img/Other pages.jpg"
+                <img class="mirror-content2" src="wtj-img/Other-pages.jpg"
                     alt="mid-fidelity wireframes sending a request">
             </a>
 
             <a href="#!" class="lightbox" id="img-hifi-others">
-                <span style="background-image: url('wtj-img/Other\ pages.jpg')"></span>
+                <span style="background-image: url('wtj-img/Other-pages.jpg')"></span>
             </a>
 
         </div>
@@ -426,11 +426,11 @@
 
         <div>
             <a href=#img-hifi-affinity-map class="lightbox-link">
-                <img class="mirror-content2" src="wtj-img/WTJ Affinity Map - WTJ Usability test.jpg" alt="Affinity map">
+                <img class="mirror-content2" src="wtj-img/WTJ-Affinity-Map-WTJ-Usability-test.jpg" alt="Affinity map">
             </a>
 
             <a href="#!" class="lightbox" id="img-hifi-affinity-map">
-                <span style="background-image: url('wtj-img/WTJ\ Affinity\ Map\ -\ WTJ\ Usability\ test.jpg')"></span>
+                <span style="background-image: url('wtj-img/WTJ-Affinity-Map-WTJ-Usability-test.jpg')"></span>
             </a>
         </div>
 
@@ -494,11 +494,11 @@
             </div>
             <div>
                 <a href=#img-revision-text class="lightbox-link">
-                    <img class="mirror-content2" src="wtj-img/Text size.jpg"
+                    <img class="mirror-content2" src="wtj-img/Text-size.jpg"
                         alt="Revisions I made based on the user test, profile">
                 </a>
                 <a href="#!" class="lightbox" id="img-revision-text">
-                    <span style="background-image: url('wtj-img/Text\ size.jpg')"></span>
+                    <span style="background-image: url('wtj-img/Text-size.jpg')"></span>
                 </a>
             </div>
         </div>
