--- a/work.html
+++ b/work.html
@@ -32,7 +32,7 @@
                 <div class="navlinks">
                     <a class="navlink" href="about.html">About</a>
                     <a class="navlink" href="work.html">Work</a>
-                    <a class="navlink" target="_blank" href="img/Kotomi Cogdill Resume 2020.pdf">Resume</a>
+                    <a class="navlink" target="_blank" href="img/Kotomi-Cogdill-Resume-2020.pdf">Resume</a>
                     <a class="navlink" href="contact.html">Contact</a>
                 </div>
             </div>
@@ -46,11 +46,11 @@
             <h2>Case Studies</h2>
 
             <div class="case-study">
-                <a href="Windows to Japan.html">
+                <a href="windows-to-japan.html">
 
 
 
-                    <img class="case-study-image" src="img/wtj mock up.png"
+                    <img class="case-study-image" src="img/wtj-mock-up.png"
                         alt="Windows to Japan, end to end application">
 
                 </a>
@@ -59,7 +59,7 @@
                     <div class="title-shurui">STUDENT PROJECT</div>
                     <div class="case-study-title">Windows to Japan</div>
                     An end-end application that replaces your physical itinerary with a digital one.
-                    <div><a class="case-study-cta case-study-cta-button" href="Windows to Japan.html">View case study</a>
+                    <div><a class="case-study-cta case-study-cta-button" href="windows-to-japan.html">View case study</a>
                     </div>
                 </div>
 
@@ -72,7 +72,7 @@
 
 
 
-                    <img class="case-study-image" src="img/Mock up brightwheel.png"
+                    <img class="case-study-image" src="img/Mock-up-brightwheel.png"
                         alt="Brightwheel, add a feature project">
 
                 </a>
@@ -95,7 +95,7 @@
 
 
 
-                    <img class="case-study-image" src="img/Matcha mock up.png"
+                    <img class="case-study-image" src="img/Matcha-mock-up.png"
                         alt="All about matcha, e-commerce website">
 
                 </a>
