Fix broken links

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <h2>Case Studies</h2>
 
             <div class="case-study">
-                <a href="Windows-to-Japan.html">
+                <a href="windows-to-japan.html">
 
 
 
@@ -89,7 +89,7 @@
                     <div class="title-shurui">STUDENT PROJECT</div>
                     <div class="case-study-title">Windows to Japan</div>
                     An end-end application that replaces your physical itinerary with a digital one..
-                    <div><a class="case-study-cta case-study-cta-button" href="Windows-to-Japan.html">View case study</a>
+                    <div><a class="case-study-cta case-study-cta-button" href="windows-to-japan.html">View case study</a>
                     </div>
                 </div>
 
