all-about-matcha.html content update
– Included more rationale in my design process

--- a/all-about-matcha.html
+++ b/all-about-matcha.html
@@ -120,9 +120,9 @@
         matcha with ice cream, desserts, or lattes.
         For the competitors, I picked companies that provide tea ceremony lessons or online experiences to see how they
         set up their booking process.
-        I discovered that those two direct competitors are not intended to have user-centered websites
-        rather they show beautiful images to impress the users.
-      
+        I discovered that Authentic Kyoto Tea Ceremony and Bikouen do not have user-friendly websites;
+        they mostly just focus on showing beautiful images to impress the users.
+
 
         <div>
             <a href=#img-competitive-analysis class="lightbox-link">
@@ -157,7 +157,7 @@
 
 
         <p>1:1 User Interviews</p>
-        I conducted user interviews to dive deeper into the topi and find needs and frustrations. I recruited with 6
+        I conducted user interviews to dive deeper into the topic and find needs and frustrations. I recruited 6
         individuals who like matcha to hear their feedback about matcha and Japanese Tea Ceremony. I learned that the
         majority of people would
         seek out Japanese Tea Ceremony as a cultural experience when they were in Japan or if they had the chance.
@@ -268,9 +268,8 @@
         </div>
 
         <p>Mid-Fidelity Wireframes</p>
-        I started to work on wireframes based on the sketches, but I realized the website was overloaded with too much
-        information about matcha. I decided to remove the unnecessary elements from the main page, to make sure that users don't get lost.
-
+        I started to work on wireframes based on the sketches. I mainly focused on the booking flow so that users will be able to have a smooth experience.
+        I tried to have minimal steps users have to go through and clarify what they need to do in order to attend a class.
         <div>
             <a href=#img-wireframes class="lightbox-link">
                 <img class="mirror-content2" src="matcha-img/Wireflows.jpg" alt="Mirror, low-fi wireframes">
@@ -281,10 +280,11 @@
             </a>
         </div>
 
-
-        After my first cleanup, there were still many pieces of information which made the main page look cluttered.
-        I realized that the main page was losing its focus of what it was telling the users.
-        After several iterations, I was able to streamline the design to be simpler and have less information in one page.
+        After the first iteration, I realized the website was overloaded with too much information about matcha.
+        I decided to remove the unnecessary elements from the main page, to make sure that users don't get lost.
+        After my first cleanup, there were still many pieces of information which made the main page look cluttered, so
+        I iterated on it again.
+        In the end, I was able to streamline the design to be simpler and have less information in one page.
 
         <div>
             <a href=#img-wireframe-main class="lightbox-link">
@@ -297,9 +297,11 @@
             </a>
         </div>
 
-        Additionally, at first there were two containers for private and group pages.
-        However, I realized these two are almost the same except for the price and a few other details, so I combined
-        them into one section.
+        Additionally, at first there were two containers for private and group classes.
+        However, I realized these two are almost the same except for the price and a few other details. I decided to
+        combine
+        them into one section so that it fits into one viewport and removes duplicate information. This way, users can
+        more quickly understand the differences.
 
         <div>
             <a href=#img-wireframe-class class="lightbox-link">
@@ -372,9 +374,13 @@
             href="https://www.figma.com/proto/y0gOSsfTJKw3IbhAWIWNIo/Matcha-hi-fi-design?page-id=0%3A1&node-id=143%3A348"
             target="_blank">View Prototype</a><br><br>
         I conducted usability tests to identify any frustrations/confusion users might have during each interaction, and
-        whether it inhibits users from performing certain tasks.
-        I recruited 3 individuals aged 24-28 who like matcha for the Zoom usability test. I also conducted a usability
-        test using Maze, which I tested with 10 individuals.
+        whether it inhibits users from performing certain tasks. My main concern was if the booking form and adding a
+        starter kit in the booking process were clear to the users.
+
+        <ul>
+            <li>Zoom (3 participants)</li>
+            <li>Maze (10 participants)</li>
+        </ul>
 
 
 
@@ -385,8 +391,8 @@
 
         <p>Affinity Map</p>
         I synthesized the results and was able to determine what makes users frustrated or confused.
-        I mainly got feedback about the tea ceremony classes and booking process, which I re-iterated on it.
-        I searched for inspiration on how to improve the design, in order to deliver a better user experience.
+        I mainly got feedback about the tea ceremony classes and booking process. After grouping the successes and
+        failures, I was able to come up with solutions and improvements for each issue.
 
         <div>
             <a href=#img-affinity class="lightbox-link">
@@ -407,7 +413,10 @@
 
         <div>
 
-            <div class="mirror-content">I made the 'shop' text more visible than the other text in the navigation bar.
+            <div class="mirror-content">
+                Since the website content is mostly about the tea ceremony classes, I decided to highlight the "shop"
+                text in the navigation bar in order to equally promote the matcha e-commerce. Some participants in the
+                usability test mentioned that the shop page was hard to find.
             </div>
 
             <div>
@@ -424,9 +433,9 @@
 
         <div>
             <div class="mirror-content">I removed the description text and included the link, "What is Japanese Tea
-                Ceremony? so that
-                those interested can read more.
-                I added icons to differentiate group and private classes. The text is simple and short, yet it contains
+                Ceremony? so that those interested can read more.
+                I added icons to differentiate group and private classes so that users can visualize what they are. The
+                text is simple and short, yet it contains
                 differences between the class type.</div>
 
             <div>
@@ -444,7 +453,9 @@
         <div>
 
             <div class="mirror-content">
-                I made a container for the booking summary and removed unnecessary text for simplicity.
+                I made a container for the booking summary and removed unnecessary text for simplicity. Before the
+                revision, users were confused about the summary because they had to read everything carefully to
+                understand it. It looks better now with less text and larger spacing for users to understand it quickly.
                 For the starter kit, I included a photo of the starter kit so the users can visualize what they are
                 ordering.
             </div>
@@ -474,7 +485,7 @@
     </div>
 
     <div class="content mirror-body">
-        <li>Assumptions could be correct or very wrong–it's important to verify them with research.</li>
+        <li>Assumptions could be correct or incorrect–it's important to verify them with research.</li>
         <li>Having visuals, such as icons and images, make a big difference in helping users navigate the website.
             Icons and images also help the users expect what things mean without reading the text.</li>
         <li>Having a lot of information doesn't always mean it's helping the users–it could result in making the users
