--- a/Brightwheel.html
+++ b/Brightwheel.html
@@ -32,7 +32,7 @@
                 <div class="navlinks">
                     <a class="navlink" href="about.html">About</a>
                     <a class="navlink" href="work.html">Work</a>
-                    <a class="navlink" target="_blank" href="img/Kotomi-Cogdill-Resume-2020.pdf">Resume</a>
+                    <a class="navlink" target="_blank" href="img/Kotomi-Cogdill-Resume2020.pdf">Resume</a>
                     <a class="navlink" href="contact.html">Contact</a>
                 </div>
             </div>
@@ -112,10 +112,13 @@
     </div>
 
     <div class="content mirror-body">
-        Although I had initially planned on conducting a survey, I decided to just stick with user interviews in order
-        to get qualitative data, since this was most important to understand the users in this project. Unfortunately it
-        was not feasible to research competitors since I had to be a registered parent or staff member to use their
-        apps..
+        For the research, I was planning to use three methods: competitive analysis, survey, and user interviews.
+        Unfortunately it was not feasible to research competitors since I had to be a registered parent or staff member
+        to use their apps. Furthermore, I decided not to do a survey and just stick with user interviews since
+        qualitative data matters more for this project. I wanted to know why and how the parents want to get to know
+        other parents and how sharing their personal and their child's information makes them feel.
+
+
 
         <p>1:1 User Interviews</p>
         Through user interviews, I was able to learn the concerns and needs of the parents.
@@ -160,11 +163,11 @@
 
 
         <p>Persona</p>
-        Through my research, I was able to learn a lot about the users, so I decided to summarize my findings into one
-        persona to remember throughout the process. It was critical for me to carefully read qnd understand the
-        interview summaries since I don't have any children. Therefore I decided to summarize my research findings into
-        one persona, in order to easily keep in mind who I was designing this feature for and what I should focus
-        on.
+        In order to keep in mind who I was designing this feature for and what I should focus on, I created a
+        persona to deepen user understandings and empathize with them. I made sure to follow the interview summary
+        carefully since this persona was important to shape the design of the new feature I'm designing.
+
+
         <div>
 
             <a href=#img-persona class="lightbox-link">
@@ -179,13 +182,11 @@
 
 
         <p>User Flow</p>
-        I decided to make a user flow to imagine how the user will think and take actions to complete a task.
-        Even though Brightwheel is an app I use every day, I only interact with the staff view, which is different from
-        parents view.
-        To understand the users (the parents) better, I first did some secondary research to learn how the interface
-        works.
-        Then, I referred back to my research to make sure that I'm not missing important elements.
-
+        I decided to make a user flow to empathize with users in how they would think and take actions to complete a
+        task. Even though Brightwheel is an app I use every day, I only interact with the staff view, which is different
+        from the parents view. For that reason and to understand the users (the parents) better, I had to do some some
+        secondary research to learn how the app works differently. The overall flow turned out to be simple since the
+        app itself is quite straightforward, which means there are limited complex actions users (the parents) can take.
         <div>
 
             <a href=#img-user-flow class="lightbox-link">
@@ -213,9 +214,9 @@
 
         <p>Sketches</p>
 
-        Before creating wireframes, I sketched out different ideas to organize my thoughts.
-        I first went to the app and took screenshots of the designs I would need to use in this project.
-        Then, I paired the new features together with the existing design in the sketches.
+        Before creating wireframes, I sketched out different ideas to organize my thoughts. I followed the style of app
+        for the privacy settings to stay consistent. For the tagged children feature, I tried to imitate other social
+        media apps so that the users are able to adjust to the app easily.
 
         <div>
 
@@ -232,13 +233,12 @@
 
 
         <p>Mid-Fidelity Wireframes</p>
-        I made wireframes before moving on to hi-fidelity design so that I could focus on the flows for the whole app.
-        I based these on the sketches and screenshots from the Brightwheel app. The difficult part of this process
-        was the fact that there are essentially two profiles in one app: the child
-        and parent. It took me some time to come up with a system to differentiate between the two within user settings.
-        At the end, I came up with the idea of including a link to the privacy settings of the child's profile, so that
-        users can locate it at either one's profile setting page.
-        I also focused on putting the privacy settings link somewhere easy to find since it's so important for users.
+        I made wireframes before moving on to hi-fidelity design so that I could focus on the flows for the whole app. I
+        based these on the sketches and screenshots from the Brightwheel app. I wanted to focus on putting the privacy
+        settings link somewhere easy to find since it's so important for users. However, the difficult part of this
+        process was the fact that there are essentially two profiles in one app: the child and parent. In the end, I
+        came up with the idea of including a link to the privacy settings on the child's profile page. This way, users
+        can locate it either here or on the main settings page.
 
 
 
@@ -270,12 +270,13 @@
 
 
         <p>Hi-Fidelity Responsive Design</p>
-        Once I finished the wireframes, I moved on to hi-fidelity designs to finalize my designs into completion.
+        Once I finished the wireframes, I moved on to hi-fidelity mocks to finalize my designs.
         While designing, I paid special attention to match the colors and paradigms in the original design.
         I made three flows for the parent messaging feature: sending a message request, editing privacy
         settings, and checking message requests.
         I didn't make any major changes from the wireframes since I mainly followed the design of the app. The
-        only design that is entirely new to the app message request. I researched different message request designs for
+        only concept that is entirely new to the app is message requests. I researched different message request designs
+        for
         inspiration, trying to make the notification obvious yet suitable to the original design.
         <br><br>
 
@@ -352,8 +353,8 @@
         made the users frustrated or confused.
         I did not hear any major privacy concerns regarding the app and its interface; rather I received comments
         concerning other features, such as locking the app.
-        Since this is such a sensitive topic, I think there could be more things that could be iterated on and
-        considered.
+        As this is such a sensitive topic, I agree with these concerns and ideas; however, they are out of the scope of
+        this project.
 
         <div>
             <a href=#img-affinity-map class="lightbox-link">
@@ -366,16 +367,16 @@
         </div>
 
         <p>Priority Revision</p>
-        My main focus is to add a new feature, so I wanted to keep the original design as much as possible and
-        not add a design that stands out from the original.
+        I decided to make revisions specifically aiming to solve participants' confusion and frustrations from the
+        usability testing.
+        Of course, while making these revisions I matched the original design as much as possible.
         <br>
 
         <div>
             <div class="mirror-content">
-                I included the text "What is a message request?". If a user is confused, they can click this to read
-                about how it works. Some participants mentioned that they can expect what it is, but they're still not
-                sure
-                what it does.
+                Some participants mentioned that they can guess what the "Send a message request" button does, but
+                they're not completely sure what it does. I included the text, "What is a message request?". If a user
+                is confused, they can click this to read about how it works.
             </div>
             <div>
                 <a href=#img-revision-profile class="lightbox-link">
@@ -390,8 +391,9 @@
 
         <div>
             <div class="mirror-content">
-                I kept the tagged children panel shown by default to make it more prominent, while still including a
-                "hide" button.
+                During the usability testing some participants did not realize the tagged children feature existed.
+                Therefore, I decided to make the tagged children panel shown by default to make it more prominent, while including a
+                "hide" button to close it.
             </div>
 
             <div>
@@ -410,12 +412,10 @@
 
         <div>
             <div class="mirror-content">
-                Some participants had a hard time finding the "display name" privacy settingsince it isn't shown until
-                they
-                deactivate the "name" toggle.
+                Some participants had a hard time finding the "display name" privacy setting since it isn't shown until
+                they deactivate the "name" toggle.
                 I added some help text to inform users how to set a display name when they don't want to share their
-                real
-                name.
+                real name.
             </div>
 
             <div>
@@ -435,16 +435,15 @@
         <div>
 
             <div class="mirror-content">
-                At first I wasn’t sure how to make the topic more obvious so that users would know they have to choose a
-                topic. I referred back to
+                For the message requests, some participants in the usability testing got confused by the required topic selection.
+                At first I wasn’t sure how to make it more obvious that choosing a topic is required. I referred back to
                 the original design and discovered that it uses purple for certain text and more subtle colors for other
                 text; it also has fewer words.
                 I decided to change the color and remove the word “Topic” to make it
-                both look cleaner and more prominent;
+                both look cleaner and more prominent.
                 I also made the drop down icon larger.<br><br>
-                A few participants mentioned that they didn't know who would receive the request, so I included some
-                explanatory
-                text.
+                A few participants also mentioned that they didn't know who would receive the request, so I included some
+                explanatory text.
             </div>
 
             <div>
@@ -474,12 +473,11 @@
     </div>
 
     <div class="content mirror-body">
-        <li>It's not easy to empathize with people you are not familiar with–research is an effective means to empathize
-            with and understand those people.</li>
+        <li>It's not easy to empathize with people you are not familiar with. Research is an effective means to understand these people.</li>
         <li>Don't assume people will understand something you understand–even small things can make people confused and
             frustrated; having explanations is helpful.</li>
-        <li>Technology (such as Brightwheel) is a great way to solve problems, yet it can create problems at the
-            same time. </li>
+        <li>Technology (such as Brightwheel) can be a powerful tool (making new friends), yet it can create problems at the
+            same time (privacy). </li>
     </div>
 
 
